[package]
name = "pulseengine-mcp-auth"
version = "0.3.0"
edition = "2021"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT OR Apache-2.0"
description = "Authentication and authorization framework for MCP servers - PulseEngine MCP Framework"
homepage = "https://github.com/avrabe/mcp-loxone"
repository = "https://github.com/avrabe/mcp-loxone"
documentation = "https://docs.rs/pulseengine-mcp-auth"
readme = "README.md"
keywords = ["mcp", "authentication", "authorization", "security", "auth"]
categories = ["authentication", "web-programming"]
rust-version = "1.70"

[dependencies]
pulseengine-mcp-protocol = "0.3.0"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

sha2 = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
chrono = { workspace = true }
dirs = { workspace = true }

keyring = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"