[package]
name = "mcp-monitoring"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
license = "MIT"
description = "Monitoring, metrics, and observability for MCP servers"
repository = "https://github.com/ralphbeier/loxone-mcp-rust"
keywords = ["mcp", "monitoring", "metrics", "observability"]
categories = ["development-tools::profiling", "web-programming"]

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[features]
default = ["metrics", "tracing"]
metrics = []
tracing = []
performance = []

[dev-dependencies]
tokio-test = "0.4"