[package]
name = "pulseengine-mcp-monitoring"
version = "0.1.1"
edition = "2021"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT OR Apache-2.0"
description = "Monitoring, metrics, and observability for MCP servers - PulseEngine MCP Framework"
repository = "https://github.com/avrabe/mcp-loxone"
keywords = ["mcp", "monitoring", "metrics", "observability"]
categories = ["development-tools::profiling", "web-programming"]

[dependencies]
pulseengine-mcp-protocol = "0.1.1"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }

[features]
default = ["metrics", "tracing"]
metrics = []
tracing = []
performance = []

[dev-dependencies]
tokio-test = "0.4"