[package]
name = "pulseengine-mcp-protocol"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
license = "MIT OR Apache-2.0"
description = "Core Model Context Protocol types and validation - PulseEngine MCP Framework"
repository = "https://github.com/avrabe/mcp-loxone"
keywords = ["mcp", "protocol", "validation", "context"]
categories = ["api-bindings", "data-structures"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"