[package]
name = "mcp-security"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
license = "MIT"
description = "Security middleware and validation for MCP servers"
repository = "https://github.com/ralphbeier/loxone-mcp-rust"
keywords = ["mcp", "security", "validation", "middleware"]
categories = ["web-programming", "authentication"]

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

validator = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Optional HTTP middleware support
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"