[package]
name = "pulseengine-mcp-security"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
license = "MIT OR Apache-2.0"
description = "Security middleware and validation for MCP servers - PulseEngine MCP Framework"
repository = "https://github.com/avrabe/mcp-loxone"
keywords = ["mcp", "security", "validation", "middleware"]
categories = ["web-programming", "authentication"]

[dependencies]
pulseengine-mcp-protocol = "0.1.0"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }

validator = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }

# Optional HTTP middleware support
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"