[package]
name = "pulseengine-mcp-server"
version = "0.1.2"
edition = "2021"
authors = ["Ralf Anton Beier <ralf_beier@me.com>"]
license = "MIT OR Apache-2.0"
description = "Generic MCP server infrastructure with pluggable backends - PulseEngine MCP Framework"
homepage = "https://github.com/avrabe/mcp-loxone"
repository = "https://github.com/avrabe/mcp-loxone"
documentation = "https://docs.rs/pulseengine-mcp-server"
readme = "README.md"
keywords = ["mcp", "server", "framework", "backend", "automation"]
categories = ["web-programming::http-server", "api-bindings"]
maintenance = { status = "actively-developed" }
rust-version = "1.70"

[dependencies]
pulseengine-mcp-protocol = "0.1.2"
pulseengine-mcp-auth = "0.1.2"
pulseengine-mcp-transport = "0.1.2"
pulseengine-mcp-security = "0.1.2"
pulseengine-mcp-monitoring = "0.1.2"

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"