[package]
name = "mcp-transport"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
license = "MIT"
description = "Transport layer implementations for MCP servers (HTTP/SSE, WebSocket, stdio)"
repository = "https://github.com/ralphbeier/loxone-mcp-rust"
keywords = ["mcp", "transport", "http", "websocket", "stdio"]
categories = ["web-programming::http-server", "network-programming"]

[dependencies]
mcp-protocol = { path = "../mcp-protocol" }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }

# HTTP transport dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }

# WebSocket transport dependencies
tokio-tungstenite = { workspace = true }
tungstenite = { workspace = true }

# Validation dependencies
regex = "1.10"
async-stream = "0.3"
chrono = { workspace = true }

[features]
default = []

[dev-dependencies]
tokio-test = "0.4"
tracing-subscriber = "0.3"
chrono = "0.4"

[[example]]
name = "test_http_sse"
required-features = []

[[example]]
name = "test_mcp_inspector"
required-features = []

[[example]]
name = "test_streamable_http"
required-features = []

[[example]]
name = "test_mcp_unified"
required-features = []