[package]
name = "hello-world-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "hello-world-server"
path = "src/main.rs"

[dependencies]
# MCP Framework crates (path dependencies for development)
pulseengine-mcp-protocol = { path = "../../mcp-protocol" }
pulseengine-mcp-server = { path = "../../mcp-server" }
pulseengine-mcp-transport = { path = "../../mcp-transport" }

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"