[package]
name = "hello-world-mcp"
version = "0.1.0"
edition = "2021"
authors = ["Ralf Anton Beier"]
license = "MIT OR Apache-2.0"

[[bin]]
name = "hello-world-server"
path = "src/main.rs"

[dependencies]
# MCP Framework crates (published versions, local paths via workspace patch)
pulseengine-mcp-protocol = "0.1.0"
pulseengine-mcp-server = "0.1.0"
pulseengine-mcp-transport = "0.1.0"

# Core dependencies
tokio = { version = "1.0", features = ["full"] }
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"